[tool.black]
line-length = 100
target-version = ['py38']
force-exclude = ["data/postgres", ".venv/"]


[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
skip = ["data/postgres", ".venv/"]

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "adapters/tests",
    "api/tests",
    "core/tests",
    "core/src/exceptions/"
]
disable_error_code = ["call-arg", "attr-defined"]
disallow_untyped_defs = true


[tool.poetry]
name = "meal-muse-api"
version = "0.1.0"
description = ""
authors = ["Hayleen Carrillo <hayleen.carrillo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^7.1.0"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.7.1"
autoflake = "^2.3.1"
mypy = "^1.10.1"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
